--- a/checify/style.css
+++ b/checify/style.css
@@ -37,6 +37,10 @@ body {
 img {
     width: 100%;
 }
+.logo-brand {
+    text-decoration: none;
+    color: var(--ink);
+}
 .h1 {
     font-size: 2.25rem;
 }
